<resources>
    <string name="app_name">Any.DO</string>
    <string name="shared_user_label">Any.DO</string>
    <string name="minimal_widget">Any.DO Minimal (1x1)</string>
    <string name="small_widget">Any.DO Compact (4x1)</string>
    <string name="big_widget_3_3">Any.DO Basic (3x3)</string>
    <string name="big_widget_4_2">Any.DO Halfling (4x2)</string>
    <string name="big_widget_4_4">Any.DO Grande (4x4)</string>
    <string name="big_widget_scroll">Any.DO Resizable</string>
    <string name="notes">Notes</string>
    <string name="reminder">Reminder</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="Ignore_btn">Ignore</string>
    <string name="accept_btn">Accept</string>
    <string name="eula_title">Terms &amp; Privacy</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Decline</string>
    <string name="voice_not_supported">This device does not support voice input</string>
    <string name="delete_all">Delete all</string>
    <string name="error_alert_past">"The reminder was set to the past, I'm turning it off"</string>
    <string name="done_list_title">Done</string>
    <string name="delete">Delete</string>
    <string name="delete_from_done_title">Delete All</string>
    <string name="delete_from_done">Are you sure?</string>
    <string name="deleting_progress">Deleting</string>
    <string name="no_done_tasks">All cleared</string>
    <string name="move_to_done">Clean up your finished tasks?</string>
    <string name="move_to_done_title">Clear</string>
    <string name="moving_progress">Cleaning</string>
    <string name="no_completed_tasks_shake">No completed tasks to shake off</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_folder_title">Choose a folder:</string>
    <string name="new_folder">New Folder</string>
    <string name="new_button">New</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="delete_folder_title">Delete Folder?</string>
    <string name="delete_folder">Everything in this folder will be moved to the Personal folder</string>
    <string name="delete_folder_empty">Are you sure?</string>
    <string name="folder_edit_default">Cannot edit the default folder</string>
    <string name="about">about</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_shake">Shake</string>
    <string name="settings_missed_call">Missed call</string>
    <string name="settings_post_meetings">Post meeting</string>
    <string name="settings_notification_widget">Status bar</string>
    <string name="settings_calendar_first_day">First day</string>
    <string name="settings_folders">Folders</string>
    <string name="settings_no_account">None</string>
    <string name="settings_notification_sound">Sound</string>
    <string name="settings_backups">Backups</string>
    <string name="settings_lang">Language</string>
    <string name="settings_done">Done Tasks</string>
    <string name="settings_select_notification_sound">Choose a notification sound</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="OK">OK</string>
    <string name="or">or</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="next_week">next week</string>
    <string name="week_days_monday_first">MTWTFSS</string>
    <string name="week_days_sunday_first">SMTWTFS</string>
    <string name="week_days_saturday_first">SSMTWTF</string>
    <string name="repeat">Only once</string>
    <string name="Off">Off</string>
    <string name="alert_custom_time_explain">Set a specific time for the reminder:</string>
    <string name="due_group_today">Today</string>
    <string name="due_group_tomorrow">Tomorrow</string>
    <string name="due_group_this_week">This Week</string>
    <string name="due_group_later">Later</string>
    <string name="priority_low">Low</string>
    <string name="priority_normal">No Rush</string>
    <string name="priority_high">Urgent</string>
    <string name="checking">Checking…</string>
    <string name="send">Send</string>
    <string name="Invite">Share</string>
    <string name="share_invite_pending">Pending (%s)</string>
    <string name="share_invite_joined">Joined (%s)</string>
    <string name="share_explain">"Share your do's
to get more done"</string>
    <string name="share_beam_explain">"Or Beam it using
Android Beam"</string>
    <string name="share_connection_error">"Oops! Problem connecting Any.DO's server. Try again later"</string>
    <string name="email">Email</string>
    <string name="SMS">SMS</string>
    <string name="AnyDO">Any.DO</string>
    <string name="add_task_edittext_hint">I want to…</string>
    <string name="small_widget_nothing_to_show">Nothing to do!</string>
    <string name="small_widget_warning">Warning: This widget consume more battery than the others</string>
    <string name="autocomplete_add_task_entry">"Add '%s'"</string>
    <string name="autocomplete_action_add">Add</string>
    <string name="autocomplete_action_remind">Remind</string>
    <string name="autocomplete_action_share">Share</string>
    <string name="Loading">Loading…</string>
    <string name="folder_default_name">Personal</string>
    <string name="folder_work">Work</string>
    <string name="mark_as_complete">Mark as complete?</string>
    <string name="settings_account_not_valid">Cannot verify the account</string>
    <string name="settings_account_dlg_title">Choose your Google Tasks account</string>
    <string name="settings_account_dlg_stop_syncing">Would you like to stop syncing with Google?</string>
    <string name="settings_account_dlg_stop_syncing_title">Stop syncing</string>
    <string name="settings_account_dlg_switch">Change the current account to %s?</string>
    <string name="settings_account_dlg_switch_title">Change account</string>
    <string name="settings_account_dlg_start_syncing">Allow syncing with %s ?</string>
    <string name="settings_account_dlg_start_syncing_title">Change account</string>
    <string name="Call">Call</string>
    <string name="Mail">Mail</string>
    <string name="Text">Text</string>
    <string name="Meet">Set</string>
    <string name="num_tasks">(%s)</string>
    <string name="about_text">"Between home, work and saving the planet, don't you wish you had more time for fun?

That's why we started Any.DO, we wanted to create a better way to make things happen."</string>
    <string name="sync_in_progress_error">Another sync is in progress, please wait.</string>
    <string name="gtasks_synchronizing">Syncing</string>
    <string name="sync_no_connectivity_error">No connectivity, try again later</string>
    <string name="sync_general_error">Something went wrong, try again later</string>
    <string name="sync_authentication_failed">Authentication failed, please make sure an account was selected</string>
    <string name="sync_completed">Google Tasks syncing was successful</string>
    <string name="first_use_title1" />
    <string name="first_use_description1" />
    <string name="first_use_title2">The general idea</string>
    <string name="first_use_description2">"Add anything that's on your mind"</string>
    <string name="first_use_title3">Plan your day</string>
    <string name="first_use_description3">"Use drag'n'drop to stay organized"</string>
    <string name="first_use_title4">Sharing, reminders and notes</string>
    <string name="first_use_description4">Collaboration is just a click away</string>
    <string name="first_use_title5">Finished something?</string>
    <string name="first_use_description5">Simply cross it off</string>
    <string name="first_use_title6">Shake it baby</string>
    <string name="first_use_description6">Clear all completed things</string>
    <string name="first_use_title7">"Install Any.DO
widgets on your home screen"</string>
    <string name="first_use_description7">"1. Go to your android home screen
2. Press and hold an open spot
3. Select Widgets (or Android Widgets)
4. Select Any.DO from the list"</string>
    <string name="first_use_title8">Any.DO as you go</string>
    <string name="first_use_description8">"Get your to-dos on all your devices.
It just works!"</string>
    <string name="first_use_color_choose_title">White or Black?</string>
    <string name="first_use_color_choose_comment">(you can change your mind later)</string>
    <string name="next">next</string>
    <string name="done">done</string>
    <string name="starting_share_server">Sharing</string>
    <string name="no_internet">Sharing requires internet connection</string>
    <string name="cant_sync_tasks_with_server">Something went wrong. Please try again later</string>
    <string name="sign_in_before_share">Please Join Any.DO before sharing</string>
    <string name="cant_send_sms">"Couldn't send SMS to your friends, try again later"</string>
    <string name="sharing_new_task_received_no_title">New task was added</string>
    <string name="sharing_sms">Hey, I need your help with something: %s</string>
    <string name="sharing_message_sent">Sent</string>
    <string name="via_anydo">Any.DO</string>
    <string name="shared_task_popup_new">%1$s needs your help with:</string>
    <string name="reinvite_dlg_title">Ping?</string>
    <string name="reinvite_dlg_text">Would you like to ping %s?</string>
    <string name="invite_title">Share:</string>
    <string name="add_notes_hint">Add a note</string>
    <string name="add_contacts_to_share">"Enter a contact's name"</string>
    <string name="sharing_are_you_sure_title">Really?</string>
    <string name="sharing_are_you_sure">Two heads are better than one, do you still want to abort?</string>
    <string name="sms_warning">* Charges may apply for SMS messages</string>
    <string name="invite_friends_title">Spread the ♥</string>
    <string name="invite_friends_message">Thats what friends are for</string>
    <string name="invite_friends_title_days_row">Finding Any.DO useful?</string>
    <string name="login_signin">Sign In</string>
    <string name="login_forgot">Forgot?</string>
    <string name="login_join">Join Any.DO</string>
    <string name="login_join_explain">Sign-up to get Any.DO on all your devices.</string>
    <string name="login_join_already_member">Already a member?</string>
    <string name="login_fb_explain">Note: Your tasks will not be linked to your Facebook account in any way</string>
    <string name="login_hint_user_display_name">Name</string>
    <string name="login_hint_user_email">Email Address</string>
    <string name="login_hint_user_new_password">New Password</string>
    <string name="login_hint_user_password">Password</string>
    <string name="login_signin_submit">Sign In</string>
    <string name="login_signin_forgot">Forgot your password?</string>
    <string name="login_register_submit">Create my account</string>
    <string name="login_register_btn">Sign Up</string>
    <string name="login_register_title">Create account</string>
    <string name="login_register_explain">To receive invitation &amp; sync your tasks</string>
    <string name="sync_anydo_sign_out">Sign out</string>
    <string name="show">SHOW</string>
    <string name="hide">HIDE</string>
    <string name="whats_new_sync_title">Thanks for Updating!</string>
    <string name="whats_new_sync_skip">Skip</string>
    <string name="whats_new_sync_explain">Want to make even more things happen? Try our new Chrome extension</string>
    <string name="menu_date">Date</string>
    <string name="menu_folder">Folder</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="help_tutorial">Tutorial</string>
    <string name="help_feedback">Feedback</string>
    <string name="help_about">About</string>
</resources>