<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/scroller" android:background="#ffffffff" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="25.0sp" android:textColor="@color/dialog_title_wh" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/login_join" style="?shareTitle" />
    <TextView android:textSize="15.0sp" android:textColor="#ff000000" android:id="@id/join_explain" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/login_join_explain" />
    <LinearLayout android:orientation="vertical" android:id="@id/fbLayout" android:paddingTop="10.0dip" android:paddingBottom="7.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="20.0sp" android:textColor="@color/selector_button_text_wh" android:layout_gravity="center_horizontal" android:id="@id/register_btn" android:background="@drawable/selector_button_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="7.0dip" android:minHeight="37.0dip" android:text="@string/login_register_btn" />
        <RelativeLayout android:id="@id/orLayout" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:background="@color/anydo_separator_wh" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_centerVertical="true" />
            <TextView android:textSize="15.0dip" android:textColor="#ff000000" android:id="@id/orText" android:background="@color/theme_main_color_wh" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/or" android:layout_centerInParent="true" />
        </RelativeLayout>
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/fbConnect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:src="@drawable/facebook_connect" />
        <TextView android:textColor="#ff000000" android:gravity="center" android:id="@id/fbConnect_explain" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/login_fb_explain" />
    </LinearLayout>
    <TextView android:textSize="15.0sp" android:gravity="center" android:id="@id/already_member" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/login_join_already_member" />
</LinearLayout>