<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/scroller" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="25.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="25.0sp" android:textColor="@color/dialog_title_wh" android:id="@id/title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/login_register_title" android:layout_weight="1.0" style="?shareTitle" />
            <ImageButton android:id="@id/closeBtn" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/close" />
        </LinearLayout>
        <TextView android:textSize="15.0sp" android:textColor="?explainTextColor" android:id="@id/register_explain" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:text="@string/login_register_explain" />
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/fbConnect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:src="@drawable/facebook_connect" />
        <RelativeLayout android:id="@id/orLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip">
            <View android:background="@color/anydo_separator_wh" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_centerVertical="true" />
            <TextView android:textSize="15.0dip" android:textColor="@color/anydo_separator_wh" android:id="@id/orText" android:background="@color/theme_main_color_wh" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/or" android:layout_centerInParent="true" />
        </RelativeLayout>
        <EditText android:editTextStyle="@style/anydo_editbox_wh" android:textSize="17.0sp" android:textColor="@color/general_text_wh" android:textColorHint="@color/textbox_hint_text_wh" android:gravity="bottom" android:id="@id/userDisplayName" android:background="@drawable/edittext_regular_bg_wh" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="37.0dip" android:hint="@string/login_hint_user_display_name" android:singleLine="true" android:capitalize="words" />
        <EditText android:editTextStyle="@style/anydo_editbox_wh" android:textSize="17.0sp" android:textColor="@color/general_text_wh" android:textColorHint="@color/textbox_hint_text_wh" android:id="@id/login_email" android:background="@drawable/edittext_regular_bg_wh" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:minHeight="37.0dip" android:hint="@string/login_hint_user_email" android:singleLine="true" android:inputType="textEmailAddress" />
        <EditText android:editTextStyle="@style/anydo_editbox_wh" android:textSize="17.0sp" android:textColor="@color/general_text_wh" android:textColorHint="@color/textbox_hint_text_wh" android:gravity="bottom" android:id="@id/password" android:background="@drawable/edittext_regular_bg_wh" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:minHeight="37.0dip" android:hint="@string/login_hint_user_new_password" android:singleLine="true" android:inputType="textPassword" />
        <Button android:textSize="20.0sp" android:textColor="@color/selector_button_text_wh" android:layout_gravity="center_horizontal" android:id="@id/submit" android:background="@drawable/selector_button_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:minHeight="45.0dip" android:text="@string/login_register_submit" />
    </LinearLayout>
</ScrollView>