<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" style="?anydoLayout"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="25.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="30.0sp" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/whats_new_sync_title" style="?shareTitle" />
        <TextView android:textSize="19.0sp" android:textColor="?explainTextColor" android:id="@id/whats_new_sync_exaplain" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/whats_new_sync_explain" />
        <include android:id="@id/chromeInvite" android:layout_height="0.0dip" android:layout_weight="1.0" layout="@layout/chrome_invite" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip">
            <Button android:textSize="17.0sp" android:textColor="?explainTextColor" android:id="@id/skip" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/whats_new_sync_skip" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>