<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/folderChooseLayout" android:background="?dlgBackground" android:layout_width="300.0dip" android:layout_height="wrap_content" android:minWidth="300.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="30.0sp" android:id="@id/title" android:paddingLeft="17.0dip" android:paddingTop="15.0dip" android:layout_width="300.0dip" android:layout_height="60.0dip" android:text="@string/choose_folder_title" style="?dlgTitle" />
    <ListView android:id="@id/foldersList" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginLeft="3.0dip" android:layout_marginTop="7.0dip" android:layout_marginRight="3.0dip" android:layout_weight="1.0" style="?anydoListStyle" />
    <View android:background="?anydoSeparatorColor" android:layout_width="fill_parent" android:layout_height="0.9dip" />
    <LinearLayout android:orientation="horizontal" android:id="@id/buttons" android:layout_width="fill_parent" android:layout_height="73.0dip">
        <Button android:id="@id/leftBtn" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/cancel" android:layout_weight="1.0" style="?dlgButton" />
        <View android:id="@id/divider" android:background="?anydoSeparatorColor" android:layout_width="0.9dip" android:layout_height="fill_parent" android:layout_marginBottom="3.0dip" />
        <Button android:id="@id/rightBtn" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/new_button" android:singleLine="true" android:layout_weight="1.0" style="?dlgButton" />
    </LinearLayout>
</LinearLayout>