<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/aboutDlg" android:background="?dlgBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="300.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/aboutTitle" android:paddingLeft="23.0dip" android:paddingTop="10.0dip" android:paddingRight="23.0dip" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/about" style="?dlgTitle" />
    <TextView android:ellipsize="none" android:layout_gravity="left" android:id="@id/aboutText" android:paddingLeft="23.0dip" android:paddingRight="23.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/about_text" android:scrollHorizontally="false" style="?dlgText" />
    <View android:id="@id/horizontal_divider" android:background="?anydoSeparatorColor" android:layout_width="fill_parent" android:layout_height="0.9dip" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" />
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/singleButtonLayout" android:layout_width="fill_parent" android:layout_height="73.0dip">
        <Button android:gravity="center" android:layout_gravity="center" android:id="@id/singleButton" android:background="@null" android:paddingRight="80.0sp" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="40.0sp" android:text="@string/OK" style="?dlgBigButton" />
    </LinearLayout>
</LinearLayout>